--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,17 @@ language: go
 go:
   - tip
 
+before_install:
+  - export GO_CURRENT_PROJECT=otr3
+  - export GO_CURRENT_PACKAGE=github.com/twstrike
+  - export GLOBAL_GOPATH=$HOME/.gopath
+  - export LOCAL_GOPATH=$HOME/.gopkgs/$GO_CURRENT_PROJECT
+  - export GOPATH=$LOCAL_GOPATH:$GLOBAL_GOPATH
+  - export PATH=$LOCAL_GOPATH/bin:$PATH
+  - mkdir -p $LOCAL_GOPATH
+  - mkdir -p $LOCAL_GOPATH/src
+  - mkdir -p $LOCAL_GOPATH/pkg
+  - mkdir -p $LOCAL_GOPATH/bin
+
 install:
   - go get gopkg.in/check.v1
